tests/e2e/semantics/object_index_int_invalid.error
Error: syntax error in story at line 2, column 1

2|    a[0] = "b"
      ^

E0100: Can't assign `string` to `int`
